--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="title_activity_display_vote_stats">Stats</string>
     <string name="title_activity_settings">settings</string>
     <string name="moodlyIdLabel">Moodly ID</string>
-    <string name="moodlyId">com.example.moodly.app.moodlyId</string>
+    <string name="moodlyId">com.leanovate.moodly.app.moodlyId</string>
     <string name="hostLabel">Host</string>
     <string name="button_update">Update</string>
 
